--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="utf-8">
     <title>Test</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.1/angular-route.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.1/angular-messages.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="factory.js"></script>
     <script type="text/javascript" src="controller.js"></script>
     </script>
   </head>
-  <body>
-
+  <body ui-view>
     <div class="" ng-controller="myController">
       <form ng-submit="getMovie()">
         <input type="text" ng-model="movie"  size="30">
         <input class="btn-primary" type="submit" value="add">
       </form>
-      {{name}}
+      {{name}} </br>
+      {{info}}
     </div>
-
+      <iframe src="http://www.localhost:3000/#/test" width="500px" height="500px"></iframe>
   </body>
 </html>
